# optitrack_bridge

./: CMakeLists.txt  README.md  package.xml
include/optitrack_bridge/: optitrack_bridge.h
scripts/: optitrack_bridge
src/: optitrack_bridge.cpp  optitrack_bridge_node.cpp
